--- a/analysis.html
+++ b/analysis.html
@@ -8,8 +8,11 @@
 <body>
     <div class="container">
         <h1>解析結果</h1>
-        <img id="analyzed-photo" src="" alt="写真">
+        <div class="frame">
+            <img id="animal-photo" src="" alt="ゲットした動物">
+        </div>
         <p id="garbage-type">解析中...</p>
+        <p id="garbage-description">説明を表示中...</p>
         <p id="environmental-impact">環境への影響: 計算中...</p>
         <button onclick="navigateTo('index.html')">ホームに戻る</button>
     </div>
