--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ごみ記録アプリ</title>
+    <title>Anipo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>ごみ記録アプリ</h1>
-        <button onclick="navigateTo('capture.html')">写真を撮る</button>
-        <button onclick="navigateTo('gallery.html')">撮った写真を見る</button>
+    <div class="logo-animation">
+        <h1>Anipo</h1>
+    </div>
+    <div class="start-button">
+        <button onclick="navigateTo('home.html')">START</button>
     </div>
     <script>
         function navigateTo(page) {
