--- a/anipomuseum.html
+++ b/anipomuseum.html
@@ -2,15 +2,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ゲットした動物たち</title>
+    <title>Anipo Museum</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav class="navbar">
+        <a href="home.html">Home</a>
+        <a href="myanipo.html">My Anipo</a>
+        <a href="anipomuseum.html">Anipo Museum</a>
+    </nav>
     <div class="container">
-        <h1>ゲットした動物たち</h1>
-        <div id="gallery"></div>
-        <button onclick="navigateTo('index.html')">ホームに戻る</button>
+        <h1>Anipo Museum</h1>
     </div>
-    <script src="gallery.js"></script>
 </body>
 </html>
