--- a/analysis.html
+++ b/analysis.html
@@ -3,7 +3,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>解析結果</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #0cdb79;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            min-height: 100vh;
+            color: white;
+        }
+        .navbar {
+            width: 100%;
+            background-color: #4cdb6d;
+            overflow: hidden;
+            display: flex;
+            justify-content: space-around;
+            padding: 10px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .navbar a {
+            text-decoration: none;
+            color: white;
+            font-size: 16px;
+            padding: 10px;
+            transition: background-color 0.3s ease;
+        }
+        .navbar a:hover {
+            background-color: #dcbf20;
+            border-radius: 8px;
+        }
+        .container {
+            text-align: center;
+            padding: 20px;
+            background: linear-gradient(145deg, #4cdb6d, #dcbf20);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 15px;
+            margin: 20px;
+            width: 90%;
+            max-width: 800px;
+        }
+        .frame {
+            position: relative;
+            width: 300px;
+            height: 300px;
+            background: white;
+            margin: 20px auto;
+            border: 10px solid #dcbf20;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .frame img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        button {
+            margin: 10px 0;
+            padding: 15px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #dcbf20;
+            color: black;
+            border: none;
+            border-radius: 8px;
+            width: 200px;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #f7e26c;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
