--- a/myanipo.html
+++ b/myanipo.html
@@ -4,6 +4,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Anipo</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #0cdb79;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            min-height: 100vh;
+            color: white;
+        }
+        .navbar {
+            width: 100%;
+            background-color: #4cdb6d;
+            overflow: hidden;
+            display: flex;
+            justify-content: space-around;
+            padding: 10px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .navbar a {
+            text-decoration: none;
+            color: white;
+            font-size: 16px;
+            padding: 10px;
+            transition: background-color 0.3s ease;
+        }
+        .navbar a:hover {
+            background-color: #dcbf20;
+            border-radius: 8px;
+        }
+        .container {
+            text-align: center;
+            padding: 20px;
+            background: linear-gradient(145deg, #4cdb6d, #dcbf20);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            border-radius: 15px;
+            margin: 20px;
+            width: 90%;
+            max-width: 800px;
+        }
+        .gallery-row {
+            margin-bottom: 20px;
+        }
+        .horizontal-scroll {
+            display: flex;
+            overflow-x: auto;
+            gap: 10px;
+            padding: 10px 0;
+            scrollbar-width: thin;
+            scrollbar-color: #ccc transparent;
+        }
+        .horizontal-scroll::-webkit-scrollbar {
+            height: 8px;
+        }
+        .horizontal-scroll::-webkit-scrollbar-thumb {
+            background: #ccc;
+            border-radius: 4px;
+        }
+        .horizontal-scroll::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        .frame {
+            min-width: 150px;
+            height: 150px;
+            border: 2px solid #ccc;
+            border-radius: 8px;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #fff;
+        }
+        .frame img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        button {
+            margin: 10px 0;
+            padding: 15px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #dcbf20;
+            color: black;
+            border: none;
+            border-radius: 8px;
+            width: 200px;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #f7e26c;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar">
@@ -13,12 +109,16 @@
     </nav>
     <div class="container">
         <h1>My Anipo</h1>
-        <button onclick="navigateTo('gallery.html')">ギャラリーを見る</button>
+        <div class="gallery-row">
+            <h2>作成したAnipo</h2>
+            <div id="created-gallery" class="horizontal-scroll"></div>
+        </div>
+        <div class="gallery-row">
+            <h2>ゲットしたAnipo</h2>
+            <div id="gotten-gallery" class="horizontal-scroll"></div>
+        </div>
+        <button onclick="navigateTo('home.html')">ホームに戻る</button>
     </div>
-    <script>
-        function navigateTo(page) {
-            window.location.href = page;
-        }
-    </script>
+    <script src="myanipo.js"></script>
 </body>
 </html>
